--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "next": "14.2.3",
+    "clsx": "2.1.1",
+    "framer-motion": "11.1.9",
+    "tailwind-merge": "2.3.0"
   },
   "devDependencies": {
     "typescript": "^5",
