--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "aos": "^2.3.4",
     "clsx": "2.1.1",
     "framer-motion": "11.1.9",
+    "i": "^0.3.7",
     "next": "14.2.3",
+    "npm": "^10.8.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "2.3.0"
